variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:2: error: not found: value biscuits
biscuits = 0
^RunHalf:4: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while (2*biscuits = caseorange +1){
        ^RunHalf:4: error: not found: value biscuits
while (2*biscuits = caseorange +1){
         ^RunHalf:9: error: not found: value biscuits
    biscuits= biscuits+1
    ^