variables.RunHalf.scala.code
var caseorange = 0
biscuits = 0

while (2*biscuits = caseorange +1){
  avance()
  if (estSurOrange()==true){
    caseorange = caseorange + 1}
  if (estSurBiscuit==true){
    biscuits= biscuits+1
  }
}